--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint index.js",
-    "test": "mocha --compilers js:babel-register test/*.test.js"
+    "test": "mocha --compilers js:babel-register test/*.test.js",
+    "dev": "babel src --out-dir lib --watch --source-maps inline"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,7 @@
   "homepage": "https://github.com/s4kr4/easyinput#readme",
   "dependencies": {},
   "devDependencies": {
-    "babel": "^6.23.0",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
