Add the files field

--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "chai": "^3.5.0",
     "eslint": "^3.19.0",
     "mocha": "^3.4.1"
-  }
+  },
+  "files": [
+    "index.js",
+    "lib"
+  ]
 }
