--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint index.js",
-    "test": "mocha --compilers js:babel-register test/*.test.js",
+    "test": "mocha --compilers js:babel-register test/**/*.js",
     "dev": "babel src --out-dir lib --watch --source-maps inline"
   },
   "repository": {
